@@ -1,29 +1,27 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+# Run CI for R using https://eddelbuettel.github.io/r-ci/
 
 language: c
 sudo: required
-dist: bionic
+dist: focal
 
 jobs:
   include:
-    #- name: r-3.5
-    #  env: R_VERSION="3.5"
-    - name: r-4.0
-      env: R_VERSION="4.0"
+    - name: linux
+      os: linux
+    #- name: macOS
+    #  os: osx
+
+env:
+  global:
+    - USE_BSPM="true"
+    - _R_CHECK_FORCE_SUGGESTS_="false"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # optionally add our launchpad repo, but not needed here
-  # - sudo add-apt-repository -y ppa:edd/r-3.5
-  # no longer needed:  load gcc-4.9 and make it default below
-  # - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-rcpp r-cran-tinytest
-  # no longer needed: opting into g++-4.9
-  # - sudo apt-get install -y gcc-4.9 g++-4.9
-  # - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
+  - ./run.sh install_all
 
 script:
   - ./run.sh run_tests
